# multythread_grep

./: CMakeLists.txt  README.txt
grep/: CMakeLists.txt  grep.cpp  grep.h  is_binary.cpp  is_binary.h  lock_free_queue.h  main.cpp
grep/tests/: CMakeLists.txt  lock_free_queue_tests.cpp
